# isometric-nyc

./: .gitignore  README.md  buildings.db  index.html  pyproject.toml
.gemini/: settings.json
assets/: index-DQHhgJY0.css  index-DrNg5Z-g.js
chats/: cursor_accessing_environment_variables.md  cursor_add_logging_for_camera_settings.md  cursor_app_py_generation_prevention_fla.md  cursor_bash_script_lines_397_408.md  cursor_begin_007_e2e_generation_step.md  cursor_can_you_write_a_quick_script_in.md  cursor_create_image_composition_script.md  cursor_create_image_processing_script.md  cursor_debug_map_plan.md  cursor_deck_gl_app_refactor_to_opensead.md  cursor_e2e_generation_tile_updates.md  cursor_edit_code_for_depth_map_generati.md  cursor_execute_dataset_infill_plan.md  cursor_export_command_button_functional.md  cursor_export_images_from_whitebox_and.md  cursor_export_import_generation_tile_re.md  cursor_export_import_quadrant_logic.md  cursor_fix_and_enhance_tile_generation.md  cursor_fix_camera_reset_on_zoom_out.md  cursor_generate_new_tile_template_libra.md  cursor_generate_plan_tiles_py_for_tile.md  cursor_generate_specific_plan_document.md  cursor_generation_app_improvements_plan.md  cursor_generation_view_queue_count_per.md  cursor_image_download_and_generation_re.md  cursor_image_quadrant_splitting_script.md  cursor_implement_automatic_generation_s.md  cursor_implement_bounds_app_plan.md  cursor_implement_generation_playbook_pl.md  cursor_implement_task_008_e2e_pixel_gen.md  cursor_implement_tile_rendering_and_sav.md  cursor_implement_water_fix_plan.md  cursor_implement_water_shader_plan.md  cursor_implement_web_app_plan.md  cursor_inference_seed_modification.md  cursor_keyboard_shortcut_changes.md  cursor_local_inference_plan_implementat.md  cursor_nano_banana_generation_task.md  cursor_new_dataset_curation_steps.md  cursor_new_york_city_map_border.md  (+23 more)
map_data/: README.md
src/: view.json
tasks/: 003_data_joining.md  004_tiles.md  007_e2e_generation.md  009_infill_middle.md  012_generation_rules.md  013_generation_app.md  014_bounds_app.md  016_generation_playbook.md  017_generation_plan_maker.md  018_water_fix.md  019_strip_plan.md  022_debug_map.md  023_generation_app_improvements.md  024_rectangle_generation_plan.md  026_postprocessing.md  027_water_select.md  028_pmtiles.md  030_cleanup_git_repo.md  (+9 more)
(+345 files in other folders)
