[project]
name = "isometric-nyc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googlemaps>=4.10.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sodapy>=2.2.0",
]

[project.scripts]
isometric-nyc = "isometric_nyc.main:main"
isometric-inspect = "isometric_nyc.inspect_db:main"

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
