[project]
name = "isometric-nyc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.52.0",
    "googlemaps>=4.10.0",
    "marimo>=0.18.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.1",
    "pyvista>=0.46.4",
    "shapely>=2.1.2",
    "sodapy>=2.2.0",
    "tabulate>=0.9.0",
]

[project.scripts]
check-boundaries = "isometric_nyc.check_boundaries:main"
check-coordinates = "isometric_nyc.check_coordinates:main"
check-db = "isometric_nyc.check_db:main"
isometric-nyc = "isometric_nyc.main:main"
inspect-db = "isometric_nyc.inspect_db:main"
inspect-columns = "isometric_nyc.inspect_columns:main"
whitebox = "isometric_nyc.whitebox:main"

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
